Commit of Content/Products/Product A/Article1.htm

--- a/Content/Products/Product A/Article1.htm
+++ b/Content/Products/Product A/Article1.htm
@@ -1,6 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:conditions="Default.Not Ready for Publish" MadCap:lastBlockDepth="6" MadCap:lastHeight="653" MadCap:lastWidth="1523">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:conditions="Default.Not Ready for Publish" MadCap:lastBlockDepth="6" MadCap:lastHeight="628" MadCap:lastWidth="624">
     <head>
+        <link href="../../Resources/TableStyles/KBTable2.css" rel="stylesheet" MadCap:stylesheetType="table" />
     </head>
     <body>
         <h1>
@@ -40,7 +41,7 @@
                 </tr>
             </tbody>
         </table>
-        <h2>Summary:</h2>
+        <h2>Machine A:</h2>
         <p>Type a one- or two-sentence summary of the article.</p>
         <h2>Full Description:</h2>
         <p>Provide a more detailed description here.</p>
